--- a/ui/app/styles/page.less
+++ b/ui/app/styles/page.less
@@ -1,9 +1,9 @@
-@sidebar-width:80px;
-@background-color: #EEEEEE;
+@import "./variables.less";
+@sidebar-width:60px;
 @border-color: #c3c3c3;
 
 body{
-  background-color: #EEEEEE;
+  background-color: @color-blanc;
   font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
 }
 #leftMenu {
@@ -18,7 +18,6 @@ body{
 
 #pageContent {
   margin-left: @sidebar-width;
- /* position: relative;*/
 }
 
 #header {
@@ -46,7 +45,7 @@ body{
 }
 
 .home-popin{
-  margin: 70px 0 0 90px !important;
+  margin: 70px 0 0 60px !important;
 }
 
 .home-popin-header {
