--- a/ui/app/styles/search.less
+++ b/ui/app/styles/search.less
@@ -1,6 +1,5 @@
-@sidebar-width: 100px;
-@background-color: #EEEEEE;
-@border-color: #c3c3c3;
+@import "./variables.less";
+@sidebar-width: 60px;
 
 .mov-logo {
   float: left;
@@ -15,64 +14,11 @@
   color: #1A3481;
 }
 
-.liveFilterContainer {
-  float: none;
-  display: inline-block;
-}
-
-.resultContainer {
-  float: none !important;
-  margin-left: 270px;
-  position: relative;
-}
-
-.liveFilter {
-  width: 15% !important;
-}
-
-.line-preview-none {
-  display: none;
-}
-
 .movie-lineResume {
   width: 100%;
   display: inline-block;
   padding-bottom: 20px;
-  border-bottom: 1px @border-color solid;
-}
-
-.movie-resume-logo img {
-  float: left;
-  width: 50px;
-  height: 50px;
-  margin: 0 10px 0 0;
-}
-
-.movie-info {
-  float: left;
-  width: 55%;
-}
-
-.movie-link-detailed-sheet {
-  float: right;
-  width: 30%;
-  text-align: right;
-  cursor: pointer;
-  text-decoration: none;
-}
-
-.movie-link-detailed-sheet img {
-  padding-left: 5px;
-}
-
-.movie-link-detailed-sheet a {
-  padding: 5px;
-  border: 1px solid #CCCCCC;
-}
-
-.movie-descrition {
-  padding: 10px 0 20px 0;
-  border-bottom: 1px @border-color solid;
+  border-bottom: 1px @color-gris2 solid;
 }
 
 .container-title, .details-panel-title {
@@ -81,32 +27,6 @@
   color: #acacac;
 }
 
-ul.selection-list li.sl-line div.sl-selection {
-  background-color: #fff;
-  min-height: 60px;
-}
-
-ul.selection-list li.sl-line {
-  padding-left: 10px;
-  min-height: 60px;
-}
-
-ul.selection-list li.sl-line:hover {
-  background: #d8e5fa;
-}
-
-.linkFilterResult {
-  text-align: right;
-  padding-right: 10px;
-  float: right;
-}
-
-.linkFilterResult a {
-  text-decoration: none;
-  padding: 5px;
-  border: 1px solid #c4c4c4;
-  background: #f5f5f5;
-}
 
 .results {
   text-align: left;
@@ -115,7 +35,7 @@ ul.selection-list li.sl-line:hover {
 }
 
 .summary {
-  background: #ffffff;
+  background: @color-blanc;
   display: inline-block;
   width: 100%;
   padding: 10px 0;
@@ -123,98 +43,11 @@ ul.selection-list li.sl-line:hover {
   font-weight: bold;
 }
 
-.qs-scope-MOVIE {
-  background: url('./../img/film.svg') no-repeat center center;
-  background-size: 100% 100%;
-}
-
-.qs-scope-PEOPLE {
-  background: url('./../img/user.svg') no-repeat center center;
-  background-size: 100% 100%;
-}
-
-.qs-scope-ALL {
-  background: url('./../img/qs-none.svg') no-repeat center center;
-  background-size: 100% 100%;
-}
-
-.results-groupBy-title {
-  padding: 5px 0 0 5px;
-}
-
-.btn-group-by-container {
-  display: inline-block;
-  width: 100%;
-  text-align: center;
-}
-
-.btn-see-more {
-  display: inline-block;
-}
-
-.btn-show-all {
-  display: inline-block;
-  float: right;
-  margin-right: 5px;
-}
-
-ul.selection-list li.sl-line div.sl-selection {
-  padding-left: 10px;
-}
-
-.line-preview {
-  background-color: #FFFFFF;
-  padding: 5px 5px;
-}
-
-.btn-preview {
-  background: url('./../img/eye.svg') no-repeat center center;
-  box-shadow: none !important;
-  padding-top: 40px;
-}
-
-.linkAdvancedSearch {
-  text-align: right;
-  padding-right: 10px;
-}
-
-.linkAdvancedSearch a {
-  text-decoration: none;
-  padding: 5px;
-  border: 1px solid #c4c4c4;
-  background: #f5f5f5;
-}
-
 .count-results {
   font-weight: bold;
   padding-left: 5px;
 }
 
-.quick-search-popin {
-  margin: 60px 0 0 80px !important;
-  z-index: 1004;
-  height: 100%;
-}
-
-.quick-search-popin .full {
-  min-height: 100%;
-}
-
-.preview-popin {
-  margin: 60px 0 0 20px !important;
-  z-index: 1004;
-  height: 100%;
-  width: 40%;
-}
-
-.preview-popin .full {
-  min-height: 100%;
-}
-
-.preview-popin-header {
-  background: white;
-  height: 27px;
-}
 
 .title-level-1, .title-level-2, .title-level-3 {
   margin-bottom: 0;
@@ -238,31 +71,11 @@ ul.selection-list li.sl-line div.sl-selection {
   background-image: none;
 }
 
-.movie-details {
-  padding: 10px 0 20px 0;
-}
-
-.movie-detail-line {
-  width: 100%;
-  display: inline-block;
-}
-
-.details-label-name {
-  float: left;
-  width: 150px;
-  text-align: right;
-  font-weight: bold;
-}
-
-.details-label-value {
-  float: left;
-  padding-left: 20px;
-}
-
 .title-group-key {
   margin: 2px 0 5px 5px;
   padding-top: 5px;
 }
+
 .item {
   margin-left: 40px;
 }
