--- a/ui/app/styles/default.scss
+++ b/ui/app/styles/default.scss
@@ -3,3 +3,9 @@
 hr {
   border-top: solid 1px $color-gris2
 }
+body {
+  background-color:  $color-blanc;
+  font-family: RobotoRegular;
+  font-size: 12px;
+  word-wrap: break-word;
+}
