--- a/ui/app/styles/font.scss
+++ b/ui/app/styles/font.scss
@@ -8,3 +8,17 @@
   font-weight:normal;
   font-style:normal;
 }
+
+@font-face {
+  font-family:"RobotoBold";
+  src: url('../fonts/Roboto-Bold.ttf');
+  font-weight:normal;
+  font-style:normal;
+}
+
+@font-face {
+  font-family:"RobotoRegular";
+  src: url('../fonts/Roboto-Regular.ttf');
+  font-weight:normal;
+  font-style:normal;
+}
