Update page style.

--- a/ui/app/styles/menu.scss
+++ b/ui/app/styles/menu.scss
@@ -25,6 +25,7 @@
   width: $menu-item-width;
   padding-top: 18px;
   display: inline-block;
+  cursor: pointer;
 }
 
 .header-menu .top-menu-item {
