--- a/api/src/main/webapp/static/stylesheets/app.css
+++ b/api/src/main/webapp/static/stylesheets/app.css
@@ -6,142 +6,6 @@
 div[data-component] {
   color: red; }
 
-.live-filter.collapsed {
-  width: 30px; }
-
-.live-filter.expanded {
-  width: 250px; }
-
-.live-filter {
-  min-height: 400px; }
-  .live-filter .icon {
-    float: right;
-    height: inherit; }
-  .live-filter .facet-selected .panel-heading {
-    background-image: url("../img/cross.svg");
-    background-repeat: no-repeat;
-    background-position: 90%; }
-  .live-filter .facet-collapsed .panel-heading {
-    background-image: url("../img/chevron-thin-down.svg");
-    background-repeat: no-repeat;
-    background-position: 90%; }
-  .live-filter .facet-expanded .panel-heading {
-    background-image: url("../img/chevron-thin-up.svg");
-    background-repeat: no-repeat;
-    background-position: 90%; }
-  .live-filter .panel-heading {
-    cursor: pointer; }
-  .live-filter ul {
-    list-style-type: none; }
-  .live-filter li {
-    cursor: pointer; }
-  .live-filter li:hover {
-    color: #E6E6E6; }
-
-.chevron-thin-left {
-  background: url("../img/chevron-thin-left.svg") no-repeat right center; }
-
-.chevron-thin-right {
-  background: url("../img/chevron-thin-right.svg") no-repeat right center; }
-
-/* Style for the quick-search-component*/
-/* Variables*/
-/* Style */
-div.qs-quick-search {
-  width: 100%;
-  position: relative;
-  height: 70px;
-  /* Input block */
-  /* Help block.*/ }
-  div.qs-quick-search div.qs-scope {
-    width: 70px;
-    height: 35px;
-    background-color: #595959;
-    padding-top: 6px;
-    padding-right: 12px;
-    padding-bottom: 6px;
-    padding-left: 12px;
-    padding: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1; }
-    div.qs-quick-search div.qs-scope > div {
-      padding: 4px 25px 4px 2px; }
-    div.qs-quick-search div.qs-scope div {
-      color: white;
-      text-align: center;
-      height: 100%; }
-      div.qs-quick-search div.qs-scope div.qs-icon > div {
-        background-size: 22px; }
-      div.qs-quick-search div.qs-scope div.qs-scope-deploy-up {
-        background: url('../img/arrow-up.svg') no-repeat center right; }
-      div.qs-quick-search div.qs-scope div.qs-scope-deploy-down {
-        background: url('../img/arrow-down.svg') no-repeat center right; }
-      div.qs-quick-search div.qs-scope div div {
-        /*padding-top: 3px;
-        padding-right: 3px;
-        padding-bottom: 3px;
-        padding-left: 3px;*/
-        border: 2px solid white; }
-        div.qs-quick-search div.qs-scope div div {
-          /*width:100%;
-          height:100%;*/
-          border: none; }
-        div.qs-quick-search div.qs-scope div div.qs-scope-none {
-          background: url('../img/qs-none.svg') no-repeat center center;
-          background-size: 100% 100%; }
-    div.qs-quick-search div.qs-scope ul {
-      position: absolute;
-      font-size: 12pt;
-      background-color: #595959;
-      padding: 10px; }
-      div.qs-quick-search div.qs-scope ul li {
-        background-position: center left 5px;
-        list-style-type: none;
-        color: white;
-        height: 32px;
-        line-height: 32px;
-        min-width: 120px;
-        padding-left: 40px;
-        background-size: 22px;
-        font-size: 14px;
-        cursor: pointer; }
-        div.qs-quick-search div.qs-scope ul li:hover {
-          background-color: rgba(141, 134, 134, 0.62); }
-        div.qs-quick-search div.qs-scope ul li.active {
-          font-weight: bold; }
-  div.qs-quick-search input[type=search] {
-    padding-top: 6px;
-    padding-right: 12px;
-    padding-bottom: 6px;
-    padding-left: 70px;
-    width: 100%;
-    height: 35px;
-    position: absolute;
-    top: 0;
-    left: 0; }
-    div.qs-quick-search input[type=search].qs-loading {
-      background: #FFF url(../img/loading.gif) no-repeat right center; }
-  div.qs-quick-search div.qs-help {
-    z-index: 2;
-    position: relative;
-    top: 40px;
-    padding-left: 45px;
-    left: 50px;
-    background: url('../img/help-arrow.svg') no-repeat center left; }
-
-.qs-scope-1 {
-  background: url('../img/earth.svg') no-repeat center center; }
-
-.qs-scope-2 {
-  background: url('../img/user.svg') no-repeat center center; }
-
-.qs-scope-3 {
-  background: url('../img/rocket.svg') no-repeat center center; }
-
-.qs-scope-none {
-  background: url('../img/qs-none.svg') no-repeat center center; }
 
 .checkbox-unchecked {
   background: url("../img/checkbox-unchecked.svg") no-repeat center; }
@@ -176,7 +40,6 @@ div.qs-quick-search {
   border-left: solid 2px; }
 .action-bar .facet-container {
   width: 400px; }
-
 
 /* Style for the list component*/
 /*variables*/
@@ -352,6 +215,143 @@ ul.selection-list {
 .timeline-body > p + p {
   margin-top: 5px; }
 
+.live-filter.collapsed {
+  width: 30px; }
+
+.live-filter.expanded {
+  width: 250px; }
+
+.live-filter {
+  min-height: 400px; }
+  .live-filter .icon {
+    float: right;
+    height: inherit; }
+  .live-filter .facet-selected .panel-heading {
+    background-image: url("../img/cross.svg");
+    background-repeat: no-repeat;
+    background-position: 90%; }
+  .live-filter .facet-collapsed .panel-heading {
+    background-image: url("../img/chevron-thin-down.svg");
+    background-repeat: no-repeat;
+    background-position: 90%; }
+  .live-filter .facet-expanded .panel-heading {
+    background-image: url("../img/chevron-thin-up.svg");
+    background-repeat: no-repeat;
+    background-position: 90%; }
+  .live-filter .panel-heading {
+    cursor: pointer; }
+  .live-filter ul {
+    list-style-type: none; }
+  .live-filter li {
+    cursor: pointer; }
+  .live-filter li:hover {
+    color: #E6E6E6; }
+
+.chevron-thin-left {
+  background: url("../img/chevron-thin-left.svg") no-repeat right center; }
+
+.chevron-thin-right {
+  background: url("../img/chevron-thin-right.svg") no-repeat right center; }
+
+/* Style for the quick-search-component*/
+/* Variables*/
+/* Style */
+div.qs-quick-search {
+  width: 100%;
+  position: relative;
+  height: 70px;
+  /* Input block */
+  /* Help block.*/ }
+  div.qs-quick-search div.qs-scope {
+    width: 70px;
+    height: 35px;
+    background-color: #595959;
+    padding-top: 6px;
+    padding-right: 12px;
+    padding-bottom: 6px;
+    padding-left: 12px;
+    padding: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1; }
+    div.qs-quick-search div.qs-scope > div {
+      padding: 4px 25px 4px 2px; }
+    div.qs-quick-search div.qs-scope div {
+      color: white;
+      text-align: center;
+      height: 100%; }
+      div.qs-quick-search div.qs-scope div.qs-icon > div {
+        background-size: 22px; }
+      div.qs-quick-search div.qs-scope div.qs-scope-deploy-up {
+        background: url('../img/arrow-up.svg') no-repeat center right; }
+      div.qs-quick-search div.qs-scope div.qs-scope-deploy-down {
+        background: url('../img/arrow-down.svg') no-repeat center right; }
+      div.qs-quick-search div.qs-scope div div {
+        /*padding-top: 3px;
+        padding-right: 3px;
+        padding-bottom: 3px;
+        padding-left: 3px;*/
+        border: 2px solid white; }
+        div.qs-quick-search div.qs-scope div div {
+          /*width:100%;
+          height:100%;*/
+          border: none; }
+        div.qs-quick-search div.qs-scope div div.qs-scope-none {
+          background: url('../img/qs-none.svg') no-repeat center center;
+          background-size: 100% 100%; }
+    div.qs-quick-search div.qs-scope ul {
+      position: absolute;
+      font-size: 12pt;
+      background-color: #595959;
+      padding: 10px; }
+      div.qs-quick-search div.qs-scope ul li {
+        background-position: center left 5px;
+        list-style-type: none;
+        color: white;
+        height: 32px;
+        line-height: 32px;
+        min-width: 120px;
+        padding-left: 40px;
+        background-size: 22px;
+        font-size: 14px;
+        cursor: pointer; }
+        div.qs-quick-search div.qs-scope ul li:hover {
+          background-color: rgba(141, 134, 134, 0.62); }
+        div.qs-quick-search div.qs-scope ul li.active {
+          font-weight: bold; }
+  div.qs-quick-search input[type=search] {
+    padding-top: 6px;
+    padding-right: 12px;
+    padding-bottom: 6px;
+    padding-left: 70px;
+    width: 100%;
+    height: 35px;
+    position: absolute;
+    top: 0;
+    left: 0; }
+    div.qs-quick-search input[type=search].qs-loading {
+      background: #FFF url(../img/loading.gif) no-repeat right center; }
+  div.qs-quick-search div.qs-help {
+    z-index: 2;
+    position: relative;
+    top: 40px;
+    padding-left: 45px;
+    left: 50px;
+    background: url('../img/help-arrow.svg') no-repeat center left; }
+
+.qs-scope-1 {
+  background: url('../img/earth.svg') no-repeat center center; }
+
+.qs-scope-2 {
+  background: url('../img/user.svg') no-repeat center center; }
+
+.qs-scope-3 {
+  background: url('../img/rocket.svg') no-repeat center center; }
+
+.qs-scope-none {
+  background: url('../img/qs-none.svg') no-repeat center center; }
+
 form.form-edit {
   border-style: solid;
   border-width: 2px;
@@ -373,9 +373,9 @@ form.form-edit {
 .sticky-navigation li.active {
   font-weight: bold; }
 
+
 .topic-displayer .topic {
   background: url("../img/cross.svg") no-repeat right center; }
-
 
 .btns-confirmation-popin {
   position: fixed;
@@ -596,13 +596,12 @@ header[data-focus-header] {
   width: 27px;
   height: 27px;
   background-position: left 3px top 3px;
-  background-color: #606060;
   cursor: pointer;
   z-index: 1050;
   position: relative; }
 
 .popin-close-btn:hover {
-  background-color: rgba(0, 0, 0, 0.7); }
+  background-color: rgba(244, 244, 244, 0.7); }
 
 .popin-close-btn.left {
   float: left; }
@@ -79494,6 +79493,28 @@ body {
   font-size: 12px;
   word-wrap: break-word; }
 
+/* line 13, stdin */
+/* line 17, stdin */
+::-webkit-scrollbar {
+  width: 10px; }
+
+/* line 17, stdin */
+/* line 21, stdin */
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #e2e2e2; }
+
+/* line 22, stdin */
+/* line 26, stdin */
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #36b7b9; }
+
+/* line 27, stdin */
+/* line 31, stdin */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #6acacb; }
+
 /* line 1, stdin */
 /* line 2, stdin */
 .details {
@@ -79745,6 +79766,55 @@ body {
 body {
   border: none; }
 
+/* line 3, stdin */
+/* line 6, stdin */
+.user-infos i {
+  font-size: 24px; }
+
+/* line 6, stdin */
+/* line 10, stdin */
+.user-infos .header-menu-item {
+  text-align: center;
+  height: 60px;
+  width: 80px;
+  padding-top: 18px;
+  display: inline-block;
+  cursor: pointer; }
+
+/* line 15, stdin */
+/* line 19, stdin */
+.badge-alerte {
+  background-color: #f82239;
+  margin-left: -10px;
+  margin-top: -5px;
+  padding: 3px 4px;
+  position: absolute; }
+
+/* line 22, stdin */
+/* line 27, stdin */
+.badge-warning {
+  background-color: #ffbe60;
+  padding: 3px 4px;
+  margin-left: -5px;
+  margin-top: -2px;
+  position: absolute; }
+
+/* line 30, stdin */
+/* line 35, stdin */
+header[data-focus-header] {
+  padding-left: 60px; }
+
+/* line 33, stdin */
+/* line 39, stdin */
+.header-back {
+  font-size: 24px;
+  text-transform: none; }
+
+/* line 13, app/styles/variables.scss */
+/* line 2, stdin */
+body {
+  border: none; }
+
 /* line 6, stdin */
 /* line 6, stdin */
 .menu-horizontal {
@@ -79851,23 +79921,6 @@ body {
 
 /* line 97, stdin */
 /* line 95, stdin */
-.badge-alerte {
-  background-color: #f82239;
-  margin-left: -10px;
-  margin-top: -5px;
-  position: absolute; }
-
-/* line 103, stdin */
-/* line 102, stdin */
-.badge-warning {
-  background-color: #ffbe60;
-  padding: 3px 4px;
-  margin-left: -5px;
-  margin-top: -2px;
-  position: absolute; }
-
-/* line 111, stdin */
-/* line 110, stdin */
 .user-image {
   background-color: rgba(5, 29, 49, 0.5);
   width: 40px;
@@ -79902,29 +79955,28 @@ body {
   position: absolute;
   left: 0;
   right: 0;
-  z-index: 1005;
   line-height: 40px; }
 
-/* line 32, stdin */
-/* line 29, stdin */
+/* line 31, stdin */
+/* line 28, stdin */
 #page {
-  padding: 70px 20px 20px 20px;
+  padding: 280px 20px 20px 20px;
   display: inline-block;
   width: 100%;
   min-width: 1300px; }
 
-/* line 39, stdin */
-/* line 36, stdin */
+/* line 38, stdin */
+/* line 35, stdin */
 .clear {
   clear: both; }
 
-/* line 43, stdin */
-/* line 40, stdin */
+/* line 42, stdin */
+/* line 39, stdin */
 .home-popin {
   margin: 70px 0 0 60px !important; }
 
-/* line 47, stdin */
-/* line 44, stdin */
+/* line 46, stdin */
+/* line 43, stdin */
 .home-popin-header {
   font-size: 16px;
   font-weight: bold;
@@ -80045,59 +80097,72 @@ Scope css
 /* line 92, stdin */
 /* line 96, stdin */
 .quick-search-popin {
-  margin: 60px 0 0 60px !important;
+  margin: 0 0 0 60px !important;
   z-index: 1004;
-  height: 100%; }
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden; }
 
-/* line 98, stdin */
-/* line 102, stdin */
+/* line 100, stdin */
+/* line 104, stdin */
 .quick-search-popin .full {
   min-height: 100%; }
 
-/* line 102, stdin */
-/* line 106, stdin */
+/* line 103, stdin */
+/* line 108, stdin */
+.quick-search-popin-header {
+  font-size: 24px;
+  padding: 20px 0 20px 30px; }
+
+/* line 108, stdin */
+/* line 113, stdin */
 .preview-popin {
   margin: 60px 0 0 20px !important;
   z-index: 1004;
   height: 100%;
   width: 40%; }
 
-/* line 109, stdin */
-/* line 113, stdin */
+/* line 115, stdin */
+/* line 120, stdin */
 .preview-popin .full {
   min-height: 100%; }
 
-/* line 113, stdin */
-/* line 117, stdin */
+/* line 119, stdin */
+/* line 124, stdin */
 .preview-popin-header {
   background: white;
   height: 27px; }
 
 /** css on click on button preview */
-/* line 120, stdin */
-/* line 123, stdin */
+/* line 126, stdin */
+/* line 130, stdin */
 .movie-details {
   padding: 10px 0 20px 0; }
 
-/* line 124, stdin */
-/* line 127, stdin */
+/* line 130, stdin */
+/* line 134, stdin */
 .movie-detail-line {
   width: 100%;
   display: inline-block; }
 
-/* line 129, stdin */
-/* line 132, stdin */
+/* line 135, stdin */
+/* line 139, stdin */
 .details-label-name {
   float: left;
   width: 150px;
   text-align: right;
   font-weight: bold; }
 
-/* line 136, stdin */
-/* line 139, stdin */
+/* line 142, stdin */
+/* line 146, stdin */
 .details-label-value {
   float: left;
   padding-left: 20px; }
+
+/* line 147, stdin */
+/* line 151, stdin */
+.quick-search-popin .popin-close-btn {
+  margin-top: 22px; }
 
 /* line 13, app/styles/variables.scss */
 /* line 2, stdin */
