--- a/ui/app/styles/default.scss
+++ b/ui/app/styles/default.scss
@@ -9,3 +9,21 @@ body {
   font-size: 12px;
   word-wrap: break-word;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: $color-gris2;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: $color-vert;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color:  $color-vert2;
+}
