--- a/ui/app/styles/quick-search.scss
+++ b/ui/app/styles/quick-search.scss
@@ -90,13 +90,19 @@ Scope css
 }
 
 .quick-search-popin {
-  margin: 60px 0 0 60px !important;
+  margin: 0 0 0 60px !important;
   z-index: 1004;
   height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .quick-search-popin .full {
   min-height: 100%;
+}
+.quick-search-popin-header {
+  font-size: 24px;
+  padding: 20px 0 20px 30px;
 }
 
 .preview-popin {
@@ -136,5 +142,9 @@ Scope css
 .details-label-value {
   float: left;
   padding-left: 20px;
+}
+
+.quick-search-popin .popin-close-btn {
+  margin-top: 22px;
 }
 
