Update quich search.

--- a/ui/app/styles/variables.scss
+++ b/ui/app/styles/variables.scss
@@ -2,6 +2,7 @@
 $color-blanc:   #FFF;
 $color-vert:    #36b7b9;
 $color-vert2:   #6acacb;
+$color-vert3:   #2a8182;
 $color-gris:    #424950;
 $color-gris2:   #e2e2e2;
 $color-rouge:   rgb(245, 73, 73); // rouge inactif, rouge alerte
