--- a/ui/app/styles/font.scss
+++ b/ui/app/styles/font.scss
@@ -22,3 +22,9 @@
   font-weight:normal;
   font-style:normal;
 }
+@font-face {
+  font-family:"RobotoItalic";
+  src: url('../fonts/Roboto-Italic.ttf');
+  font-weight:normal;
+  font-style:normal;
+}
