--- a/api/src/main/webapp/static/stylesheets/app.css
+++ b/api/src/main/webapp/static/stylesheets/app.css
@@ -80097,18 +80097,20 @@ Scope css
 /* line 90, stdin */
 .linkAdvancedSearch {
   text-align: right;
-  padding-right: 10px; }
+  padding-right: 10px;
+  text-transform: uppercase; }
 
-/* line 91, stdin */
-/* line 95, stdin */
+/* line 92, stdin */
+/* line 96, stdin */
 .linkAdvancedSearch a {
   text-decoration: none;
-  padding: 5px;
+  padding: 5px 7px;
   border: 1px solid #e2e2e2;
-  background: #f5f5f5; }
+  border-radius: 15px;
+  color: #424950; }
 
-/* line 98, stdin */
-/* line 102, stdin */
+/* line 100, stdin */
+/* line 104, stdin */
 .quick-search-popin {
   margin: 0 0 0 0 !important;
   padding-left: 60px;
@@ -80118,69 +80120,69 @@ Scope css
   overflow-x: hidden;
   width: 50%; }
 
-/* line 108, stdin */
-/* line 112, stdin */
+/* line 110, stdin */
+/* line 114, stdin */
 .quick-search-popin .full {
   min-height: 100%; }
 
-/* line 111, stdin */
-/* line 116, stdin */
+/* line 113, stdin */
+/* line 118, stdin */
 .quick-search-popin-header {
   font-size: 24px;
   padding: 20px 0 20px 30px; }
 
-/* line 116, stdin */
-/* line 121, stdin */
+/* line 118, stdin */
+/* line 123, stdin */
 .preview-popin {
   margin: 0 0 0 20px !important;
   z-index: 1004;
   height: 100%;
   width: 50%; }
 
-/* line 123, stdin */
-/* line 128, stdin */
+/* line 125, stdin */
+/* line 130, stdin */
 .preview-popin .full {
   min-height: 100%; }
 
-/* line 127, stdin */
-/* line 132, stdin */
+/* line 129, stdin */
+/* line 134, stdin */
 .preview-popin-header {
   background: white;
   height: 27px; }
 
 /** css on click on button preview */
-/* line 134, stdin */
-/* line 138, stdin */
+/* line 136, stdin */
+/* line 140, stdin */
 .movie-details {
   padding: 10px 0 20px 0; }
 
-/* line 138, stdin */
-/* line 142, stdin */
+/* line 140, stdin */
+/* line 144, stdin */
 .movie-detail-line {
   width: 100%;
   display: inline-block; }
 
-/* line 143, stdin */
-/* line 147, stdin */
+/* line 145, stdin */
+/* line 149, stdin */
 .details-label-name {
   float: left;
   width: 150px;
   text-align: right;
   font-weight: bold; }
 
-/* line 150, stdin */
-/* line 154, stdin */
+/* line 152, stdin */
+/* line 156, stdin */
 .details-label-value {
   float: left;
   padding-left: 20px; }
 
-/* line 155, stdin */
-/* line 159, stdin */
+/* line 157, stdin */
+/* line 161, stdin */
 .quick-search-popin .popin-close-btn {
   margin-top: 22px; }
 
-/* line 158, stdin */
-/* line 163, stdin */
+/* line 160, stdin */
+/* line 165, stdin */
 .qs-help_container {
   position: fixed;
   top: 30%;
@@ -80191,12 +80193,36 @@ Scope css
   color: #FFF;
   border: 1px solid transparent; }
 
-/* line 168, stdin */
-/* line 174, stdin */
+/* line 170, stdin */
+/* line 176, stdin */
 .qs-help_container img {
   float: left;
   margin-right: 5px;
   margin-top: 5px; }
+
+/* line 176, stdin */
+/* line 182, stdin */
+.group-result-header {
+  border-bottom: 1px solid #e2e2e2;
+  padding-bottom: 15px; }
+
+/* line 180, stdin */
+/* line 187, stdin */
+.qs-group-results li {
+  border-bottom: 1px solid #e2e2e2; }
+
+/* line 183, stdin */
+/* line 191, stdin */
+.qs-group-results {
+  box-shadow: none !important; }
+
+/* line 186, stdin */
+/* line 195, stdin */
+.qs-results-most-relevents {
+  width: 150px;
+  color: #424950;
+  font-size: 14px;
+  float: left; }
 
 /* line 14, app/styles/variables.scss */
 /* line 2, stdin */
@@ -80261,35 +80287,42 @@ body {
 .title-level-1, .title-level-2, .title-level-3 {
   margin-bottom: 0; }
 
+/* line 55, stdin */
 /* line 56, stdin */
-/* line 56, stdin */
+.title-level-1 {
+  color: #36b7b9; }
+
+/* line 58, stdin */
+/* line 60, stdin */
 .title-level-1 .form-control {
   font-size: 16px;
   font-weight: bold;
-  color: #824A34;
+  color: #36b7b9;
   background-image: none; }
 
-/* line 63, stdin */
-/* line 63, stdin */
+/* line 65, stdin */
+/* line 67, stdin */
 .title-level-2 .form-control {
   font-size: 14px;
   font-weight: bold;
   background-image: none; }
 
-/* line 69, stdin */
-/* line 69, stdin */
+/* line 71, stdin */
+/* line 73, stdin */
 .title-level-3 .form-control {
   font-size: 14px;
   background-image: none; }
 
-/* line 74, stdin */
-/* line 74, stdin */
+/* line 76, stdin */
+/* line 78, stdin */
 .title-group-key {
   margin: 2px 0 5px 5px;
+  color: #36b7b9;
+  font-size: 20px;
   padding-top: 5px; }
 
-/* line 79, stdin */
-/* line 79, stdin */
+/* line 83, stdin */
+/* line 85, stdin */
 .item {
   margin-left: 40px; }
 
