--- a/ui/app/styles/quick-search.scss
+++ b/ui/app/styles/quick-search.scss
@@ -86,13 +86,15 @@ Scope css
 .linkAdvancedSearch {
   text-align: right;
   padding-right: 10px;
+  text-transform: uppercase;
 }
 
 .linkAdvancedSearch a {
   text-decoration: none;
-  padding: 5px;
+  padding: 5px 7px;
   border: 1px solid  $color-gris2;
-  background: #f5f5f5;
+  border-radius: 15px;
+  color: $color-gris;
 }
 
 .quick-search-popin {
@@ -169,4 +171,21 @@ Scope css
    float : left;
    margin-right: 5px;
    margin-top: 5px
+ }
+
+ .group-result-header {
+   border-bottom: 1px solid $color-gris2;
+   padding-bottom: 15px;
+ }
+ .qs-group-results li {
+   border-bottom: 1px solid $color-gris2;
+ }
+ .qs-group-results {
+   box-shadow: none !important;
+ }
+ .qs-results-most-relevents {
+   width: 150px;
+   color: $color-gris;
+   font-size: 14px;
+   float: left;
  }
