--- a/ui/app/styles/search.scss
+++ b/ui/app/styles/search.scss
@@ -52,11 +52,13 @@ $sidebar-width: 60px;
 .title-level-1, .title-level-2, .title-level-3 {
   margin-bottom: 0;
 }
-
+.title-level-1 {
+  color: $color-vert;
+}
 .title-level-1 .form-control {
   font-size: 16px;
   font-weight: bold;
-  color: #824A34;
+  color: $color-vert;
   background-image: none;
 }
 
@@ -73,6 +75,8 @@ $sidebar-width: 60px;
 
 .title-group-key {
   margin: 2px 0 5px 5px;
+  color: $color-vert;
+  font-size: 20px;
   padding-top: 5px;
 }
 
